# 3dg_proj

./: .gitmodules  CMakeLists.txt
shader/: advanced_lighting.frag  advanced_lighting.vert  calc_norm.geom  calc_norm.vert  depth.vert  empty.frag  glass.frag  mirror.frag  mmd.frag  mmd.vert  model.frag  model.fs  model.vert  normalDisplayShader.geom  normalDisplayShader.vert  skybox.frag  snow.frag  snow.vert  standard.frag  standard.vert  text.frag  text.vert
src/: camera.cpp  camera.h  game.cpp  game.h  lighting.cpp  lighting.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shader_s.h  snowmanager.cpp  snowmanager.h  sphere.cpp  stage.cpp  stage.h  stb_image.h  texture.cpp  texture.h  vertex_data_textures.h  vertex_snow.h
src/object/: plane.cpp  plane.h  skybox.cpp  skybox.h  snowmanager.cpp  snowmanager.h  sphere.cpp  sphere.h  text.cpp  text.h  vertex_snow.h  vertices_data.h
src/object/mmd/: mmdmaterial.h  mmdmodel.cpp  mmdmodel.h
src/object/text/: freetype-gl.h
